# ochre

./: .cursorrules  .gitignore  README.md  go.sh  plan.md
backend/: README.md  go.sh  pyproject.toml
backend/app/: __init__.py  db.py  main.py  mounts.py  vfs.py
backend/app/agent/: __init__.py  openrouter.py  prelude.py  prompt.py  runner.py  stream_runner.py  tool_dispatch.py  tool_errors.py  toolspecs.py
backend/app/api/: events.py  fs.py  kanban.py  logs.py  session_chat.py  sessions.py  settings.py  todos.py  ws_sessions.py
backend/app/conversation/: hub.py  model.py
backend/app/email/: __init__.py  gmail_client.py  gmail_config.py
backend/app/events/: bus.py
backend/app/fs/: __init__.py  router.py  skills.py
backend/app/fs/providers/: __init__.py  email_gmail.py  kanban_notion.py  kanban_root.py  mnt.py  root.py  shortcuts.py  todos.py
backend/app/logging/: debug_mode.py  ndjson.py
backend/app/notion/: __init__.py  cache.py  client.py  config.py  markdown.py  sync.py
backend/app/sessions/: store.py
backend/app/settings/: store.py
backend/app/todos/: __init__.py  store.py
backend/app/tools/: __init__.py  mount_fs.py
backend/app/ws/: hub.py
backend/config/: mounts.json
backend/data/todos/: template.md  template.todo.md
backend/scripts/: gmail_auth.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: .gitignore
frontend/e2e/tests/: file-tree-actions.mobile.spec.ts  (+5 more)
frontend/src/: App.tsx  api.ts  debugLog.ts  index.css  main.tsx  sessionApi.ts  ws.ts
(+17 files in other folders)
